[package]
name = "tomography"
version = "0.1.0"
authors = ["Domenico Shura <shura1991@gmail.com>"]
edition = "2018"

[lib]
name = "tomography"
path = "src/lib.rs"

[[bin]]
name = "tomography"
path = "src/main.rs"

[dependencies]
libc = "0.2.94"
cfg-if = "1.0.0"
errno = "0.2.7"
rug = "1.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
uuid = "0.5"
core-foundation = { version = "0.9.1", features = ["with-uuid"] }
smc = "0.2.2"
ioctl-rs = "0.2.0"
ifstructs = "0.1.1"
